# trade_test

./: .gitignore  AGENTS.md  README.md  daily_briefing_2026_02_13.md
system/: README.md  config.daemon.test.yaml  config.yaml  pyproject.toml
system/config/: dashboard_snapshot_artifact_selection.json  dashboard_snapshot_source_heads.json  dashboard_snapshot_ui_routes.json  ict_cvd_factor_spec.yaml  skill_mcp_routing_policy.json  term_atoms.yaml
system/docs/: ADAPTIVE_TASK_MODES.md  ARCHITECTURE_REVIEW.md  BRANCH_POLICY.md  CPA_AUTOMATION_COMPARISON.md  DASHBOARD_LANE_SYNC_MATRIX.md  DEMO_VERSIONING_BASELINE.md  ENTRYPOINT_AUDIT_MATRIX.md  FENLIE_CODEX_MEMORY.md  FENLIE_CODEX_MEMORY.md.bak.memory-tree-rollout  FENLIE_DASHBOARD_ENGINEERING_RUNBOOK.md  FENLIE_DASHBOARD_PUBLIC_DEPLOY.md  FENLIE_SKILL_MCP_ARCHITECTURE.md  FENLIE_SKILL_USAGE_PLAYBOOK.md  ICT_CVD_FENLIE_INTEGRATION_2026-03-10.md  INFRA_CANARY_CONTRACT.md  JSHOOK_MCP_FENLIE_USAGE.md  LEGACY_SIDECAR_DECOMMISSION.md  OPENCLAW_CLOUD_BRIDGE.md  PROGRESS.md  PROMPT_AGENTS_V2_DRAFT.md  REPO_STRUCTURE_STANDARD.md  TERM_ATOM_REGISTRY.md  THEORY_PRACTICE_LOG_2026-03-02.md  THEORY_PROCESS.md  TIME_SYNC_RUNBOOK.md  TRADINGVIEW_BASIS_ARB_RUNBOOK.md
system/infra/: docker-compose.yml
system/output/: README.md
system/review/: 2026-02-13_data_ingest_timing.json
system/scripts/: ack_paper_consecutive_loss_guardrail.py  apply_runtime_profile.py  assess_ict_cvd_readiness.py  auto_git_sync.sh  backfill_paper_last_loss_ts.py  backtest_binance_indicator_combo_etf.py  backtest_binance_indicator_combo_native_crypto.py  backtest_brooks_price_action_all_market.py  baseline_promotion_rollback_drill.sh  binance_api_sampling_test.py  binance_execution_friction_backfill.py  binance_factor_continuous_backtest.py  binance_infra_canary.py  (+250 more)
(+1025 files in other folders)
