[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fenlie"
version = "0.1.0"
description = "Fenlie Antifragile Trading System"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "PyYAML>=6.0",
  "akshare>=1.18.0",
  "yfinance>=0.2.66",
  "tqdm>=4.66",
]

[project.scripts]
fenlie = "lie_engine.cli:main"
lie = "lie_engine.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
